fix title overflow

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -15,6 +15,7 @@
   &__title {
     height: 50px;
     font-size: 1rem;
+    overflow: hidden;
   }
   &__text {
     font-size: 0.75rem;
